update scorecard service